--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/chokidar": "^2.1.3",
+    "@types/dotenv": "^8.2.0",
     "@types/node": "^14.14.12",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "chokidar": "^3.4.3"
+    "chokidar": "^3.4.3",
+    "dotenv": "^8.2.0"
   }
 }
