--- a/package.json
+++ b/package.json
@@ -1,16 +1,33 @@
 {
-  "name": "serato-dc",
+  "name": "serato",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "repository": "git@github.com:mookiejones/serato_js.git",
+  "author": "Charles Heath Berman <Charles.Heath.Berman@gmail.com>",
   "license": "MIT",
+  "keywords": [
+    "serato",
+    "typescript"
+  ],
   "devDependencies": {
+    "@jest/globals": "^29.4.2",
     "@types/chokidar": "^2.1.3",
     "@types/dotenv": "^8.2.0",
-    "@types/node": "^14.14.12",
-    "typescript": "^4.1.3"
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.13.0",
+    "jest": "^29.4.2",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
+  },
+  "scripts": {
+    "test": "jest",
+    "testCoverage": "jest --coverage",
+    "testCache": "jest --no-cache",
+    "clean": "rimraf ./dist && rimraf ./coverage",
+    "build": "npx tsc"
   },
   "dependencies": {
-    "chokidar": "^3.4.3",
-    "dotenv": "^8.2.0"
+    "chokidar": "^3.5.3",
+    "dotenv": "^16.0.3"
   }
 }
