--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^18.13.0",
     "jest": "^29.4.2",
     "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "scripts": {
