--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "@vercel/ncc": "^0.36.1",
     "jest": "^29.4.2",
+    "js-yaml": "^4.1.0",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
@@ -25,7 +28,9 @@
     "testCoverage": "jest --coverage",
     "testCache": "jest --no-cache",
     "clean": "rimraf ./dist && rimraf ./coverage",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "package": "ncc build --source-map --license licenses.txt",
+    "all": "npm run clean && npm run build &&  npm run package && npm test"
   },
   "dependencies": {
     "chokidar": "^3.5.3",
