--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -28,13 +28,19 @@ jobs:
         with:
           node-version: 16.x
 
-      - name: Install dependencies
+      - name: Install dependencies  
         run: npm ci
 
       - name: Rebuild the dist/ directory
         run: |
           npm run build
           npm run package
+
+
+      - name: action-yarn
+        # You may pin to the exact commit or the version.
+        # uses: comchangs/action-yarn@e4a1f4800849aa2e73dbc77d872a3c011cdc28d5
+        uses: comchangs/action-yarn@v0.1-beta
 
       - name: Compare the expected and actual dist/ directories
         run: |
