--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Rebuild the dist/ directory
         run: |
-          npm run build
-          npm run package
+          yarn build
+          yarn package
 
 
       - name: action-yarn
