--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,6 +11,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: action-yarn
+        # You may pin to the exact commit or the version.
+        # uses: comchangs/action-yarn@e4a1f4800849aa2e73dbc77d872a3c011cdc28d5
+        uses: comchangs/action-yarn@v0.1-beta
+
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
@@ -22,11 +27,17 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: action-yarn
+        # You may pin to the exact commit or the version.
+        # uses: comchangs/action-yarn@e4a1f4800849aa2e73dbc77d872a3c011cdc28d5
+        uses: comchangs/action-yarn@v0.1-beta
+
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
+      - run: yarn 
       - run: npm ci
       - run: npm publish
         env:
