--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/ncc": "^0.36.1",
     "jest": "^29.4.2",
     "js-yaml": "^4.1.0",
+    "rimraf": "^4.1.2",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
