--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,17 +11,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: action-yarn
-        # You may pin to the exact commit or the version.
-        # uses: comchangs/action-yarn@e4a1f4800849aa2e73dbc77d872a3c011cdc28d5
-        uses: comchangs/action-yarn@v0.1-beta
-
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm ci
-      - run: npm test
+      - run: yarn install
+      # - run: npm ci
+      - run: yarn test
 
   publish-npm:
     needs: build
