--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,4 +21,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./
       - run: |
-          npm test
+          npm run install
+      # - run: |
+      #     npm run build
+      # - run: |
+      #     npm run test
