--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./
       - run: |
-          npm run install
+          npm run test
       # - run: |
       #     npm run build
       # - run: |
