--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@types/chokidar": "^2.1.3",
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^29.4.0",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.13.0",
     "@typescript-eslint/parser": "^5.51.0",
     "@vercel/ncc": "^0.36.1",
+    "binary-reader": "^0.1.2",
     "jest": "^29.4.2",
     "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
     "rimraf": "^4.1.2",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
